fixed out of bounds error

--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,6 @@ code {
 .color-7 {
   background-color: var(--color-7);
 }
+.color-8 {
+  background-color: #000;
+}
